--- a/src/_includes/sections/our-team.njk
+++ b/src/_includes/sections/our-team.njk
@@ -8,16 +8,16 @@
         </div>
 
         <ul class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-y-8 ~gap-x-4/6">
-            {% for item in team.items %}
+            {% for item in collections.team %}
                 <li class="flex flex-col items-center gap-4">
                     <picture class="w-full">
-                        <source srcset="{% getUrl item.imageUrl | resize({ width: 732, height: 640, position: 'attention' }) | avif %}" type="image/avif">
-                        <source srcset="{% getUrl item.imageUrl | resize({ width: 732, height: 640, position: 'attention' }) | webp %}" type="image/webp">
-                        <source srcset="{% getUrl item.imageUrl | resize({ width: 732, height: 640, position: 'attention' }) | jpeg %}" type="image/jpeg">
+                        <source srcset="{% getUrl item.data.image | resize({ width: 732, height: 640, position: 'attention' }) | avif %}" type="image/avif">
+                        <source srcset="{% getUrl item.data.image | resize({ width: 732, height: 640, position: 'attention' }) | webp %}" type="image/webp">
+                        <source srcset="{% getUrl item.data.image | resize({ width: 732, height: 640, position: 'attention' }) | jpeg %}" type="image/jpeg">
                         <img
                             class="object-cover h-[20rem] max-xl:w-full rounded-3xl"
-                            src="{% getUrl item.imageUrl | resize({ width: 732, height: 640, position: 'attention' }) | jpeg %}"
-                            alt="item.imageAlt"
+                            src="{% getUrl item.data.image | resize({ width: 732, height: 640, position: 'attention' }) | jpeg %}"
+                            alt="Instruktor tanečního studia Ká - {{ item.data.name }}"
                             width="366"
                             height="320"
                             loading="lazy"
@@ -27,13 +27,13 @@
                     </picture>
 
                     <!-- INSTRUCTOR NAME -->
-                    <span class="text-center ~text-xl/2xl text-black dark:text-white font-semibold">{{ item.name }}</span>
+                    <span class="text-center ~text-xl/2xl text-black dark:text-white font-semibold">{{ item.data.name }}</span>
 
                     <!-- COURSES -->
                     <ul class="flex flex-wrap justify-center gap-2 max-w-64">
-                        {% for course in item.courses %}
+                        {% for course in item.data.courses %}
                             <li class="py-1 px-2 bg-stone-200 dark:bg-stone-800 text-stone-800 dark:text-stone-200 text-sm rounded-lg">
-                                {{ course.title }}
+                                {{ course }}
                             </li>
                         {% endfor %}
                     </ul>
