feature: blog implementation

--- a/src/_includes/sections/footer.njk
+++ b/src/_includes/sections/footer.njk
@@ -58,7 +58,7 @@
 
                     <div class="flex gap-4">
                         <!-- FACEBOOK -->
-                        <a href="{{ client.socials.facebook }}" target="_blank">
+                        <a href="{{ client.socials.facebook }}" target="_blank" aria-label="Facebook {{ client.name }}">
                             <img
                                 src="/assets/svgs/socials/facebook.svg"
                                 alt="Ikona Facebook"
@@ -71,7 +71,7 @@
                         </a>
 
                         <!-- INSTAGRAM -->
-                        <a href="{{ client.socials.instagram }}" target="_blank">
+                        <a href="{{ client.socials.instagram }}" target="_blank" aria-label="Instagram {{ client.name }}">
                             <img
                                 src="/assets/svgs/socials/instagram.svg"
                                 alt="Ikona Instagram"
