--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -7,37 +7,58 @@
 {% endblock %}
 
 {% block body %}
-    {% include "components/landing.njk" %}
+    {% include "sections/landing.njk" %}
 
-    <article class="px-4 sm:px-8 py-32 bg-white dark:bg-slate-950">
-        <div class="container m-auto flex gap-16">
-            <div class="flex flex-col items-center gap-8 w-full max-w-4xl">
-                <picture>
-                    <img class="w-full aspect-[2/1] object-cover border border-slate-400 dark:border-slate-600 rounded-2xl" src="{{ image }}" alt="{{ imageAlt }}" decoding="async" width="894" height="446" draggable="false">
-                </picture>
+    <article class="~px-4/8 py-24 bg-white dark:bg-stone-900">
+        <div class="container m-auto flex flex-col items-center ~gap-8/16">
+            <picture>
+                <!-- MOBILE IMAGE -->
+                <source media="(max-width: 600px)" srcset="{% getUrl image | resize({ width: 736, height: 490 }) | avif %}" type="image/avif">
+                <source media="(max-width: 600px)" srcset="{% getUrl image | resize({ width: 736, height: 490 }) | webp %}" type="image/webp">
+                <source media="(max-width: 600px)" srcset="{% getUrl image | resize({ width: 736, height: 490 }) | jpeg %}" type="image/jpeg">
+                <!-- TABLET IMAGE -->
+                <source media="(max-width: 1024px)" srcset="{% getUrl image | resize({ width: 1524, height: 1016 }) | avif %}" type="image/avif">
+                <source media="(max-width: 1024px)" srcset="{% getUrl image | resize({ width: 1524, height: 1016 }) | webp %}" type="image/webp">
+                <source media="(max-width: 1024px)" srcset="{% getUrl image | resize({ width: 1524, height: 1016 }) | jpeg %}" type="image/jpeg">
+                <!-- DESKTOP IMAGE -->
+                <source media="(min-width: 1024px)" srcset="{% getUrl image | resize({ width: 1792, height: 1194 }) | avif %}" type="image/avif">
+                <source media="(min-width: 1024px)" srcset="{% getUrl image | resize({ width: 1792, height: 1194 }) | webp %}" type="image/webp">
+                <source media="(min-width: 1024px)" srcset="{% getUrl image | resize({ width: 1792, height: 1194 }) | jpeg %}" type="image/jpeg">
+                <img
+                    class="object-cover rounded-4xl"
+                    src="{% getUrl image | resize({ width: 1792, height: 1194 }) | jpeg %}"
+                    alt="{{ imageAlt }}"
+                    width="896"
+                    height="597"
+                    loading="lazy"
+                    decoding="async"
+                    aria-hidden="true"
+                    draggable="false">
+            </picture>
 
-                <!-- BLOG POST -->
-                <section class="prose prose-slate dark:prose-invert w-full max-w-[75ch]">
-                    <div class="flex flex-col gap-2">
-                        <!-- BLOG TITLE -->
-                        <h1 class="~text-2xl/4xl mb-0">{{ title }}</h1>
-                        <!-- BLOG METADATA -->
-                        <div class="flex items-center">
-                            <span class="text-sm text-slate-700 dark:text-slate-300 font-medium">{{ author }}</span>
-                            <!-- DIVIDER-->
-                            <svg class="text-slate-700 dark:text-slate-300" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-                                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
-                            </svg>
-                            <span class="text-sm text-slate-700 dark:text-slate-300 font-medium">{{ date | postDate }}</span>
-                        </div>
+            <!-- BLOG POST -->
+            <section class="flex flex-col gap-8 w-full max-w-[75ch]">
+                <div class="flex flex-col gap-2">
+                    <!-- BLOG TITLE -->
+                    <h1 class="~text-3xl/5xl text-black dark:text-white font-bold !leading-[1.1]">{{ title }}</h1>
+
+                    <!-- BLOG METADATA -->
+                    <div class="flex items-center">
+                        <span class="text-sm text-slate-700 dark:text-slate-300 font-medium">{{ author }}</span>
+                        <!-- DIVIDER-->
+                        <svg class="text-slate-700 dark:text-slate-300" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+                        </svg>
+                        <span class="text-sm text-slate-700 dark:text-slate-300 font-medium">{{ date | postDate }}</span>
                     </div>
+                </div>
 
-                    <!-- BLOG TEXT -->
+                <!-- BLOG TEXT -->
+                <div class="prose prose-stone dark:prose-invert">
                     {{ content | safe }}
-                </section>
-            </div>
+                </div>
+            </section>
 
-            {% include "components/featured-posts.njk" %}
         </div>
     </article>
 
