--- a/src/_includes/sections/header.njk
+++ b/src/_includes/sections/header.njk
@@ -40,7 +40,7 @@
     <!-- NAVIGATION -->
     <nav class="lg:basis-1/3 flex justify-center w-full max-lg:absolute max-lg:top-full max-lg:py-6 max-lg:left-0 max-lg:bg-background max-lg:border-b-2 max-lg:border-secondary max-lg:-z-10
     max-lg:transition-transform max-lg:duration-300 max-lg:origin-top max-lg:scale-y-0 group-[.mobile-menu]/body:max-lg:scale-y-100">
-      <ul class="flex max-lg:flex-col ~gap-4/8">
+      <ul class="flex max-lg:flex-col lg:~gap-4/8 w-full">
         {% set navPages = collections.all | eleventyNavigation %}
 
         {# Loop through all pages with a eleventyNavigation in the frontmatter #}
@@ -50,7 +50,7 @@
           {% set hasChild = entry.children.length %}
 
           <li
-            class="group/li relative flex"
+            class="group/li relative flex max-lg:flex-col max-lg:items-center {% if hasChild -%} dropdown {%- endif %}"
             {%- if hasChild -%}tabindex="0"{%- endif -%}
           >
 
@@ -58,7 +58,7 @@
             {% if hasChild %}
               {# Render the <button> with the active class, dropdown icon and child links #}
               <button
-                  class="dropdown-button flex items-center gap-1.5 ~p-2/4 whitespace-nowrap transition-colors duration-300 text-stone-200 hover:text-white"
+                  class="dropdown-button flex items-center gap-1.5 ~p-1.5/4 whitespace-nowrap transition-colors duration-300 text-stone-200 hover:text-white"
                   aria-expanded="false"
                   aria-controls="dropdown-{{ entry.key | slug }}"
                   aria-label="dropdown-{{ entry.key | slug }}"
@@ -73,17 +73,18 @@
               </button>
 
               {# Dropdowns have another ul/li set up within the parent li, which gets rendered in the same way as a normal link #}
-              <div class="absolute top-[calc(100%-0.25rem)] left-0 p-4 transition-transform duration-300 scale-y-0 origin-top group-hover/li:scale-y-100">
-                <ul id="dropdown-{{ entry.key | slug }}" class="flex flex-col bg-background/80 border-b-2 border-secondary">
+              <div class="max-lg:w-full max-lg:bg-stone-900 max-lg:h-0 max-xl:opacity-0 max-lg:group-[.active]/li:h-full max-lg:group-[.active]/li:opacity-100
+              lg:absolute lg:top-[calc(100%-0.25rem)] lg:left-0 lg:p-4 lg:transition-transform lg:duration-300 lg:scale-y-0 lg:origin-top lg:group-hover/li:scale-y-100">
+                <ul id="dropdown-{{ entry.key | slug }}" class="flex flex-col max-lg:items-center lg:bg-background/80 lg:border-b-2 lg:border-secondary">
                   {% for child in entry.children %}
                     {# Define a hasChild variable to make it easier to test what navigation items are have child dropdown pages #}
                     {% set hasSubchild = child.children.length %}
 
-                    <li class="drop-li group/subli inline-block">
+                    <li class="drop-li group/subli flex flex-col items-center w-full {% if hasChild -%} dropdown {%- endif %}">
                       {% if hasSubchild %}
                         {# Render the <button> with the active class, dropdown icon and child links #}
                         <button
-                          class="dropdown-button flex items-center gap-1.5 py-3 px-4 whitespace-nowrap transition-colors duration-300 text-stone-200 hover:text-white hover:bg-background peer-hover:bg-background group-hover/subli:bg-background"
+                          class="dropdown-button flex justify-center items-center gap-1.5 w-full ~p-1.5/4 lg:py-3 lg:px-4 whitespace-nowrap transition-colors duration-300 ~text-sm/base text-stone-200 hover:text-white lg:hover:bg-background lg:peer-hover:bg-background lg:group-hover/subli:bg-background"
                           aria-expanded="false"
                           aria-controls="dropdown-{{ child.key | slug }}"
                           aria-label="dropdown-{{ child.key | slug }}"
@@ -97,15 +98,16 @@
                           </svg>
                         </button>
 
-                        <div class="absolute top-4 left-[calc(100%-1rem)] transition-transform duration-300 scale-x-0 origin-left group-hover/subli:scale-x-100">
-                          <ul id="dropdown-{{ child.key | slug }}" class="flex flex-col bg-background border-b-2 border-secondary">
+                        <div class="max-lg:w-full max-lg:bg-stone-900 max-lg:h-0 max-lg:opacity-0 max-lg:group-[.active]/subli:h-full max-lg:group-[.active]/subli:opacity-100
+                        lg:absolute lg:top-4 lg:left-[calc(100%-1rem)] lg:transition-transform lg:duration-300 lg:scale-x-0 lg:origin-left lg:group-hover/subli:scale-x-100">
+                          <ul id="dropdown-{{ child.key | slug }}" class="dropdown-button flex flex-col bg-stone-950 max-lg:pb-0 max-lg:group-[.active]/subli:pb-1 lg:bg-background lg:border-b-2 lg:border-secondary">
                             {% for subchild in child.children %}
                               <li class="inline-block">
                                 <a
                                   href="{{ subchild.url }}"
-                                  class="li-link inline-block whitespace-nowrap w-full py-3 px-4 transition-[background-color] duration-300
-                                  {%- if child.url == page.url %} text-white hover:bg-background
-                                  {%- else %} text-stone-200 hover:text-white hover:bg-background{% endif %}"
+                                  class="li-link inline-flex max-lg:justify-center whitespace-nowrap w-full ~p-1.5/4 lg:py-3 lg:px-4 ~text-sm/base transition-[background-color] duration-300
+                                  {%- if child.url == page.url %} text-white lg:hover:bg-background
+                                  {%- else %} text-stone-200 hover:text-white lg:hover:bg-background{% endif %}"
                                   {%- if child.url == page.url -%}aria-current="page"{%- endif -%}>
                                   {{ subchild.key }}
                                 </a>
@@ -116,9 +118,9 @@
                       {% else %}
                         <a
                           href="{{ child.url }}"
-                          class="li-link inline-block whitespace-nowrap w-full py-3 px-4 transition-[background-color] duration-300
-                          {%- if child.url == page.url %} text-white hover:bg-background
-                          {%- else %} text-stone-200 hover:text-white hover:bg-background{% endif %}"
+                          class="li-link inline-flex max-lg:justify-center whitespace-nowrap w-full ~p-1.5/4 lg:py-3 lg:px-4 ~text-sm/base transition-[background-color] duration-300
+                          {%- if child.url == page.url %} text-white lg:hover:bg-background
+                          {%- else %} text-stone-200 hover:text-white lg:hover:bg-background{% endif %}"
                           {%- if child.url == page.url -%}aria-current="page"{%- endif -%}
                         >
                           {{ child.key }}
@@ -131,7 +133,7 @@
             {% else %}
               {# Normal pages are rendered as <a> tags, in the normal way you'd expect #}
               <a
-                class="~p-2/4 whitespace-nowrap transition-colors duration-300
+                class="~p-1.5/4 whitespace-nowrap transition-colors duration-300
                 {%- if entry.url == page.url %} text-white font-semibold
                 {%- else %} text-stone-200 hover:text-white{% endif %}"
                 href="{{ entry.url }}"
@@ -238,15 +240,15 @@
       <!-- MOBILE MENU BUTTON -->
       <button
         id="mobile-menu-toggle"
-        class="group lg:hidden flex justify-center items-center gap-1 h-11 w-11 bg-stone-200/75 rounded-xl transition-transform duration-300 [&.active]:rotate-90"
+        class="group lg:hidden flex justify-center items-center gap-1 h-11 w-11 bg-secondary rounded-xl transition-transform duration-300 [&.active]:rotate-90"
         type="button"
         aria-expanded="false"
       >
         <span class="sr-only">Otevřít navigaci</span>
         <span class="relative block h-3.5 w-5">
-          <span class="absolute top-0 block h-0.5 w-full bg-stone-800 rounded-full transition-transform duration-300 group-[.active]:rotate-45 group-[.active]:top-1/2 group-[.active]:-translate-y-1/2 group-[.active]:left-1/2 group-[.active]:-translate-x-1/2"></span>
-          <span class="absolute top-1/2 -translate-y-1/2 block h-0.5 w-full bg-stone-800 rounded-full transition-[opacity] duration-300 group-[.active]:opacity-0"></span>
-          <span class="absolute bottom-0 block h-0.5 w-full bg-stone-800 rounded-full transition-transform duration-300 group-[.active]:rotate-[315deg] group-[.active]:top-1/2 group-[.active]:-translate-y-1/2 group-[.active]:left-1/2 group-[.active]:-translate-x-1/2"></span>
+          <span class="absolute top-0 block h-0.5 w-full bg-white rounded-full transition-transform duration-300 group-[.active]:rotate-45 group-[.active]:top-1/2 group-[.active]:-translate-y-1/2 group-[.active]:left-1/2 group-[.active]:-translate-x-1/2"></span>
+          <span class="absolute top-1/2 -translate-y-1/2 block h-0.5 w-full bg-white rounded-full transition-[opacity] duration-300 group-[.active]:opacity-0"></span>
+          <span class="absolute bottom-0 block h-0.5 w-full bg-white rounded-full transition-transform duration-300 group-[.active]:rotate-[315deg] group-[.active]:top-1/2 group-[.active]:-translate-y-1/2 group-[.active]:left-1/2 group-[.active]:-translate-x-1/2"></span>
         </span>
       </button>
     </div>
