--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1332,6 +1332,45 @@ select {
   --tw-prose-invert-td-borders: #334155;
 }
 
+.prose-zinc {
+  --tw-prose-body: #3f3f46;
+  --tw-prose-headings: #18181b;
+  --tw-prose-lead: #52525b;
+  --tw-prose-links: #18181b;
+  --tw-prose-bold: #18181b;
+  --tw-prose-counters: #71717a;
+  --tw-prose-bullets: #d4d4d8;
+  --tw-prose-hr: #e4e4e7;
+  --tw-prose-quotes: #18181b;
+  --tw-prose-quote-borders: #e4e4e7;
+  --tw-prose-captions: #71717a;
+  --tw-prose-kbd: #18181b;
+  --tw-prose-kbd-shadows: 24 24 27;
+  --tw-prose-code: #18181b;
+  --tw-prose-pre-code: #e4e4e7;
+  --tw-prose-pre-bg: #27272a;
+  --tw-prose-th-borders: #d4d4d8;
+  --tw-prose-td-borders: #e4e4e7;
+  --tw-prose-invert-body: #d4d4d8;
+  --tw-prose-invert-headings: #fff;
+  --tw-prose-invert-lead: #a1a1aa;
+  --tw-prose-invert-links: #fff;
+  --tw-prose-invert-bold: #fff;
+  --tw-prose-invert-counters: #a1a1aa;
+  --tw-prose-invert-bullets: #52525b;
+  --tw-prose-invert-hr: #3f3f46;
+  --tw-prose-invert-quotes: #f4f4f5;
+  --tw-prose-invert-quote-borders: #3f3f46;
+  --tw-prose-invert-captions: #a1a1aa;
+  --tw-prose-invert-kbd: #fff;
+  --tw-prose-invert-kbd-shadows: 255 255 255;
+  --tw-prose-invert-code: #fff;
+  --tw-prose-invert-pre-code: #d4d4d8;
+  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
+  --tw-prose-invert-th-borders: #52525b;
+  --tw-prose-invert-td-borders: #3f3f46;
+}
+
 .prose-stone {
   --tw-prose-body: #44403c;
   --tw-prose-headings: #1c1917;
@@ -1638,6 +1677,13 @@ select {
   -webkit-line-clamp: 1;
 }
 
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
 .block {
   display: block;
 }
@@ -1652,6 +1698,10 @@ select {
 
 .flex {
   display: flex;
+}
+
+.inline-flex {
+  display: inline-flex;
 }
 
 .table {
@@ -2130,6 +2180,16 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-stone-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 10 9 / var(--tw-bg-opacity, 1));
+}
+
+.bg-stone-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 25 23 / var(--tw-bg-opacity, 1));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -2198,6 +2258,16 @@ select {
 .py-32 {
   padding-top: 8rem;
   padding-bottom: 8rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-16 {
@@ -2315,6 +2385,11 @@ select {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-zinc-200 {
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -2530,6 +2605,14 @@ select {
   gap: clamp(2rem,-2.29rem + 10.71vw,8rem)/* fluid from 2rem at 40rem to 8rem at 96rem */;
 }
 
+.\~gap-2\/8 {
+  gap: clamp(0.5rem,-0.57rem + 2.68vw,2rem)/* fluid from 0.5rem at 40rem to 2rem at 96rem */;
+}
+
+.\~gap-8\/16 {
+  gap: clamp(2rem,0.57rem + 3.57vw,4rem)/* fluid from 2rem at 40rem to 4rem at 96rem */;
+}
+
 .\~gap-x-16\/32 {
   -moz-column-gap: clamp(4rem,1.14rem + 7.14vw,8rem)/* fluid from 4rem at 40rem to 8rem at 96rem */;
        column-gap: clamp(4rem,1.14rem + 7.14vw,8rem)/* fluid from 4rem at 40rem to 8rem at 96rem */;
@@ -2550,6 +2633,13 @@ select {
 
 .\~p-2\/4 {
   padding: clamp(0.5rem,0.14rem + 0.89vw,1rem)/* fluid from 0.5rem at 40rem to 1rem at 96rem */;
+}
+
+.\~p-1 /* error - Missing end value */ {
+}
+
+.\~p-1\.5\/4 {
+  padding: clamp(0.375rem,-0.071rem + 1.116vw,1rem)/* fluid from 0.375rem at 40rem to 1rem at 96rem */;
 }
 
 .\~px-4\/8 {
@@ -3110,6 +3200,21 @@ html {
   background-color: rgb(245 245 244 / var(--tw-bg-opacity, 1));
 }
 
+.group:nth-child(odd) .group-odd\:bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 98 216 / var(--tw-bg-opacity, 1));
+}
+
+.group\/li:nth-child(odd) .group-odd\/li\:bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 98 216 / var(--tw-bg-opacity, 1));
+}
+
+.group\/li:nth-child(even) .group-even\/li\:bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 137 49 / var(--tw-bg-opacity, 1));
+}
+
 .group:hover .group-hover\:-translate-x-1 {
   --tw-translate-x: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3126,6 +3231,12 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.group\/a:hover .group-hover\/a\:scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .group\/li:hover .group-hover\/li\:scale-y-100 {
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3137,6 +3248,11 @@ html {
 }
 
 .group:hover .group-hover\:scale-x-0 {
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/a:hover .group-hover\/a\:scale-x-0 {
   --tw-scale-x: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -3167,6 +3283,10 @@ html {
   top: 50%;
 }
 
+.group\/li.active .group-\[\.active\]\/li\:h-full {
+  height: 100%;
+}
+
 .group.active .group-\[\.active\]\:-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3184,6 +3304,11 @@ html {
 
 .group.active .group-\[\.active\]\:rotate-\[315deg\] {
   --tw-rotate: 315deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/li.active .group-\[\.active\]\/li\:scale-y-100 {
+  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -3279,6 +3404,10 @@ html {
   .max-xl\:flex-col {
     flex-direction: column;
   }
+
+  .max-xl\:opacity-0 {
+    opacity: 0;
+  }
 }
 
 @media not all and (min-width: 64rem) {
@@ -3302,6 +3431,14 @@ html {
     display: none;
   }
 
+  .max-lg\:h-0 {
+    height: 0px;
+  }
+
+  .max-lg\:w-full {
+    width: 100%;
+  }
+
   .max-lg\:origin-top {
     transform-origin: top;
   }
@@ -3313,6 +3450,18 @@ html {
 
   .max-lg\:flex-col {
     flex-direction: column;
+  }
+
+  .max-lg\:items-center {
+    align-items: center;
+  }
+
+  .max-lg\:justify-center {
+    justify-content: center;
+  }
+
+  .max-lg\:overflow-y-auto {
+    overflow-y: auto;
   }
 
   .max-lg\:border-b-2 {
@@ -3329,9 +3478,31 @@ html {
     background-color: rgb(35 31 32 / var(--tw-bg-opacity, 1));
   }
 
+  .max-lg\:bg-stone-950 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(12 10 9 / var(--tw-bg-opacity, 1));
+  }
+
+  .max-lg\:bg-stone-900 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(28 25 23 / var(--tw-bg-opacity, 1));
+  }
+
   .max-lg\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .max-lg\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .max-lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .max-lg\:opacity-0 {
+    opacity: 0;
   }
 
   .max-lg\:transition-transform {
@@ -3344,9 +3515,33 @@ html {
     transition-duration: 300ms;
   }
 
+  .group\/li.active .max-lg\:group-\[\.active\]\/li\:h-full {
+    height: 100%;
+  }
+
+  .group\/subli.active .max-lg\:group-\[\.active\]\/subli\:h-full {
+    height: 100%;
+  }
+
   .group\/body.mobile-menu .group-\[\.mobile-menu\]\/body\:max-lg\:scale-y-100 {
     --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .group\/subli.active .max-lg\:group-\[\.active\]\/subli\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
+  .group\/subli.active .max-lg\:group-\[\.active\]\/subli\:pb-1 {
+    padding-bottom: 0.25rem;
+  }
+
+  .group\/li.active .max-lg\:group-\[\.active\]\/li\:opacity-100 {
+    opacity: 1;
+  }
+
+  .group\/subli.active .max-lg\:group-\[\.active\]\/subli\:opacity-100 {
+    opacity: 1;
   }
 }
 
@@ -3401,6 +3596,26 @@ html {
 }
 
 @media (min-width: 64rem) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:left-0 {
+    left: 0px;
+  }
+
+  .lg\:top-\[calc\(100\%-0\.25rem\)\] {
+    top: calc(100% - 0.25rem);
+  }
+
+  .lg\:left-\[calc\(100\%-1rem\)\] {
+    left: calc(100% - 1rem);
+  }
+
+  .lg\:top-4 {
+    top: 1rem;
+  }
+
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
@@ -3415,6 +3630,24 @@ html {
 
   .lg\:basis-1\/3 {
     flex-basis: 33.333333%;
+  }
+
+  .lg\:origin-top {
+    transform-origin: top;
+  }
+
+  .lg\:origin-left {
+    transform-origin: left;
+  }
+
+  .lg\:scale-y-0 {
+    --tw-scale-y: 0;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:scale-x-0 {
+    --tw-scale-x: 0;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:grid-cols-3 {
@@ -3435,6 +3668,77 @@ html {
 
   .lg\:gap-16 {
     gap: 4rem;
+  }
+
+  .lg\:border-b-2 {
+    border-bottom-width: 2px;
+  }
+
+  .lg\:border-secondary {
+    --tw-border-opacity: 1;
+    border-color: rgb(0 98 216 / var(--tw-border-opacity, 1));
+  }
+
+  .lg\:bg-background\/80 {
+    background-color: rgb(35 31 32 / 0.8);
+  }
+
+  .lg\:bg-background {
+    --tw-bg-opacity: 1;
+    background-color: rgb(35 31 32 / var(--tw-bg-opacity, 1));
+  }
+
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:transition-transform {
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .lg\:duration-300 {
+    transition-duration: 300ms;
+  }
+
+  .lg\:\~gap-4\/8 {
+    gap: clamp(1rem,0.29rem + 1.79vw,2rem)/* fluid from 1rem at 40rem to 2rem at 96rem */;
+  }
+
+  .group\/li:hover .lg\:group-hover\/li\:scale-y-100 {
+    --tw-scale-y: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .group\/subli:hover .lg\:group-hover\/subli\:scale-x-100 {
+    --tw-scale-x: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .group\/subli:hover .lg\:group-hover\/subli\:bg-background {
+    --tw-bg-opacity: 1;
+    background-color: rgb(35 31 32 / var(--tw-bg-opacity, 1));
+  }
+
+  .peer:hover ~ .lg\:peer-hover\:bg-background {
+    --tw-bg-opacity: 1;
+    background-color: rgb(35 31 32 / var(--tw-bg-opacity, 1));
+  }
+
+  .lg\:hover\:bg-background:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(35 31 32 / var(--tw-bg-opacity, 1));
   }
 }
 
