--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -83,7 +83,7 @@
     </section>
 
     <!-- COURSES -->
-    <section class="py-24 ~px-4/8 bg-background dark:bg-stone-950">
+    <section id="kurzy" class="py-24 ~px-4/8 bg-background dark:bg-stone-950">
         <div class="container m-auto flex flex-col gap-12">
             <!-- TOPPER + HEADING -->
             <div class="flex flex-col items-center gap-2">
