--- a/src/_includes/sections/header.njk
+++ b/src/_includes/sections/header.njk
@@ -233,7 +233,7 @@
       </label>
 
       <!-- CTA -->
-      <a href="https://www.google.com/" target="_blank" class="btn max-lg:hidden">
+      <a href="https://rezervace.tanecnistudioka.cz/" target="_blank" class="btn max-lg:hidden">
         Rezervace
       </a>
 
