fix: add fetchpriority to hero image

--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -78,7 +78,8 @@
                 loading="lazy"
                 decoding="async"
                 aria-hidden="true"
-                draggable="false">
+                draggable="false"
+                fetchpriority="high">
         </picture>
     </section>
 
