chore: client edits

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1572,10 +1572,6 @@ select {
   margin-top: 0.125rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -1696,18 +1692,6 @@ select {
 
 .min-h-\[6lh\] {
   min-height: 6lh;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.min-h-\[64rem\] {
-  min-height: 64rem;
-}
-
-.min-h-\[48rem\] {
-  min-height: 48rem;
 }
 
 .w-0 {
@@ -2060,11 +2044,6 @@ select {
      object-fit: cover;
 }
 
-.object-top {
-  -o-object-position: top;
-     object-position: top;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -2335,6 +2314,11 @@ select {
   line-height: clamp(2.25rem,1.71rem + 1.34vw,3rem)/* fluid from 2.25rem at 40rem to 3rem at 96rem */;
 }
 
+.\~text-3xl\/6xl {
+  font-size: clamp(1.875rem,0.536rem + 3.348vw,3.75rem)/* fluid type from 1.875rem at 40rem to 3.75rem at 96rem */;
+  line-height: clamp(2.25rem,1.18rem + 2.68vw,3.75rem)/* fluid from 2.25rem at 40rem to 3.75rem at 96rem */;
+}
+
 .\~text-4xl\/6xl {
   font-size: clamp(2.25rem,1.18rem + 2.68vw,3.75rem)/* fluid type from 2.25rem at 40rem to 3.75rem at 96rem */;
   line-height: clamp(2.5rem,1.61rem + 2.23vw,3.75rem)/* fluid from 2.5rem at 40rem to 3.75rem at 96rem */;
@@ -2375,17 +2359,19 @@ select {
   line-height: clamp(1rem,0.82rem + 0.45vw,1.25rem)/* fluid from 1rem at 40rem to 1.25rem at 96rem */;
 }
 
-.\~text-3xl\/6xl {
-  font-size: clamp(1.875rem,0.536rem + 3.348vw,3.75rem)/* fluid type from 1.875rem at 40rem to 3.75rem at 96rem */;
-  line-height: clamp(2.25rem,1.18rem + 2.68vw,3.75rem)/* fluid from 2.25rem at 40rem to 3.75rem at 96rem */;
-}
-
 .\~top-\[-4rem\]\/\[2rem\] {
   top: clamp(-4rem,-8.29rem + 10.71vw,2rem)/* fluid from -4rem at 40rem to 2rem at 96rem */;
 }
 
 .\~left-\[-12rem\]\/\[-18rem\] {
   left: clamp(-18rem,-7.71rem + -10.71vw,-12rem)/* fluid from -12rem at 40rem to -18rem at 96rem */;
+}
+
+.\~mt-0 /* error - Missing end value */ {
+}
+
+.\~mt-0\.5\/1 {
+  margin-top: clamp(0.125rem,0.036rem + 0.223vw,0.25rem)/* fluid from 0.125rem at 40rem to 0.25rem at 96rem */;
 }
 
 .\~h-14\/16 {
@@ -2406,18 +2392,6 @@ select {
 
 .\~h-\[24rem\]\/\[53rem\] {
   height: clamp(24rem,3.29rem + 51.79vw,53rem)/* fluid from 24rem at 40rem to 53rem at 96rem */;
-}
-
-.\~min-h-\[48rem\]\/\[64rem\] {
-  min-height: clamp(48rem,36.57rem + 28.57vw,64rem)/* fluid from 48rem at 40rem to 64rem at 96rem */;
-}
-
-.\~min-h-\[32rem\]\/\[64rem\] {
-  min-height: clamp(32rem,9.14rem + 57.14vw,64rem)/* fluid from 32rem at 40rem to 64rem at 96rem */;
-}
-
-.\~min-h-\[56rem\]\/\[64rem\] {
-  min-height: clamp(56rem,50.29rem + 14.29vw,64rem)/* fluid from 56rem at 40rem to 64rem at 96rem */;
 }
 
 .\~min-h-\[40rem\]\/\[64rem\] {
@@ -2476,16 +2450,16 @@ select {
   gap: clamp(1rem,0.29rem + 1.79vw,2rem)/* fluid from 1rem at 40rem to 2rem at 96rem */;
 }
 
+.\~gap-6\/8 {
+  gap: clamp(1.5rem,1.14rem + 0.89vw,2rem)/* fluid from 1.5rem at 40rem to 2rem at 96rem */;
+}
+
 .\~gap-8\/16 {
   gap: clamp(2rem,0.57rem + 3.57vw,4rem)/* fluid from 2rem at 40rem to 4rem at 96rem */;
 }
 
 .\~gap-8\/32 {
   gap: clamp(2rem,-2.29rem + 10.71vw,8rem)/* fluid from 2rem at 40rem to 8rem at 96rem */;
-}
-
-.\~gap-6\/8 {
-  gap: clamp(1.5rem,1.14rem + 0.89vw,2rem)/* fluid from 1.5rem at 40rem to 2rem at 96rem */;
 }
 
 .\~gap-x-16\/32 {
@@ -3367,10 +3341,6 @@ html {
 }
 
 @media (min-width: 40rem) {
-  .sm\:flex {
-    display: flex;
-  }
-
   .sm\:aspect-\[2\/1\] {
     aspect-ratio: 2/1;
   }
@@ -3389,10 +3359,6 @@ html {
 }
 
 @media (min-width: 48rem) {
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:items-start {
     align-items: flex-start;
   }
