--- a/src/_includes/sections/locations.njk
+++ b/src/_includes/sections/locations.njk
@@ -19,7 +19,7 @@
                     <iframe class="h-[24rem] w-full rounded-3xl" src="{{ item.iframeUrl }}" title="{{ item.title }} - mapa" width="496" height="384" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     <!-- TEXT CARD -->
-                    <div class="flex flex-col items-center gap-8 w-[calc(100%-1rem)] sm:w-full max-w-[24rem] max-sm:px-4 p-6 -mt-8 bg-background rounded-3xl">
+                    <div class="relative flex flex-col items-center gap-8 w-[calc(100%-1rem)] sm:w-full max-w-[24rem] max-sm:px-4 p-6 -mt-8 bg-background rounded-3xl z-10">
                         <!-- TITLE + TEXT -->
                         <div class="flex flex-col items-center gap-3">
                             <span class="text-center ~text-xl/2xl text-white font-semibold">{{ item.title }}</span>
