feature: old website link in footer

--- a/src/_includes/sections/footer.njk
+++ b/src/_includes/sections/footer.njk
@@ -105,6 +105,12 @@
 
                 <!-- MISC LINKS -->
                 <div class="flex items-center gap-4">
+                    <!-- ORIGINAL WEBSITE -->
+                    <a href="https://original.tanecnistudioka.cz/" target="_blank" class="text-sm text-stone-300 hover:underline hover:text-white">Původní web</a>
+
+                    <!-- SEPARATOR -->
+                    <div class="h-[1.125rem] w-0.5 bg-stone-300"></div>
+
                     <a href="/provozni-rad" class="text-sm text-stone-300 hover:underline hover:text-white">Provozní řád</a>
 
                     <!-- SEPARATOR -->
